--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td>  <img src="arun.png" alt="Arun Profile Picture"></td>
+      <td>  <img src="images/arun.png" alt="Arun Profile Picture"></td>
       <td>  <h1>Arun Kumar Gusainwal</h1>
       <p><em>Automation & Design Engineer at <strong> <a href="https://suaautomation.com/">Sua Automation</a>  </strong></em></p></td>
     </tr>
